Proyecto en Angular con algunos cambios

--- a/src/app/Layout/header/header.component.html
+++ b/src/app/Layout/header/header.component.html
@@ -1,3 +1,8 @@
 <header>
   <h1>Protección Barrial 24hs</h1>
+  <img src="../../../assets/App.gif" alt="ProteccionBarrial">
+  <h2>¿Qué es Protección barrial 24hs?</h2>
+  <p>Aplicación para vigilancia barrial que permita a los vecinos alertarse sobre actos delictivos, accidentes y emergencias.
+    <br />Con accesos rápidos para comunicarse con servicios de emergencia  (Policía, Bomberos, Ambulancias,etc.).
+    <br />También tendrá la posibilidad de compartir la ubicación en tiempo real si así lo desea o requiere.
 </header>
