--- a/src/app/Layout/nav/nav.component.html
+++ b/src/app/Layout/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-gray bg-gray">
     <a class="navbar-brand" href="index.html">
-        <img src="../../../assets/logoSeguridad.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../../../assets/logoSeguridad.jpeg" width="40" height="40" class="d-inline-block align-top" alt="">
         Protección Barrial 24hs
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -10,23 +10,24 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-
             <li class="nav-item">
-                <a class="nav-link active" id="active" href="index.html">Inicio</a>
+                <a class="nav-link" routerLink="/" routerLinkActive="active">Inicio</a>
             </li>
-
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Ingresar</a>
+                <a class="nav-link" routerLink="/login" routerLinkActive="active">Ingresar</a>
             </li>
-
             <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registrarse</a>
+                <a class="nav-link" routerLink="/registro" routerLinkActive="active">Registrarse</a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/tienda" routerLinkActive="active">Tienda</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/sobre-nosotros" routerLinkActive="active">Sobre nosotros</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Escribir aqui" aria-label="Search">
-            <button class="btn btn-primary" type="submit">Buscar</button>
+            <button class="btn btn-primary" routerLink="/carrito">Carrito</button>
         </form>
     </div>
 </nav>
