--- a/src/app/Pages/contrasenia/contrasenia.component.html
+++ b/src/app/Pages/contrasenia/contrasenia.component.html
@@ -1,3 +1,11 @@
-<p>
-  contrasenia works!
-</p>
+<div class="login-box">
+    <img src="../../../assets/logoSeguridad.jpeg" class="avatar" alt="Avatar Image">
+    <form name=form action="inicio sesion">
+        <label for="email">Dirección de email</label>
+        <input type="email" id="email" placeholder="Ingrese email" required>
+        <button type="submit" class="btn btn-primary" onclick="validarEmail()">Recuperar contraseña</button>
+        <div class="link">
+            <a href="/registro">Registrarse</a>
+        </div>
+    </form>
+</div>
