--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,3 +1,16 @@
-<p>
-  login works!
-</p>
+<div class="login-box">
+  <img src="../../../assets/logoSeguridad.jpeg" class="avatar" alt="Avatar Image">
+  <form name=form method="post" action="login.php">
+    <!--USUARIO INGRESO-->
+    <label for="username" >Usuario</label>
+    <input type="text" name="usuarioF" id="usuario" placeholder="Ingresar Usuario" required> 
+    <!--CONTRASEÑA INGRESO-->
+    <label for="password">Contraseña</label>
+    <input type="password" name="contrasenia" id="contraseña" placeholder="Ingresar Contraseña">
+    <button type="submit" class="btn btn-primary" onclick="validarLogin()">Ingresar</button>
+    <div class="links">
+      <a href="/contrasenia" class="contrasenia">Olvidaste la contraseña?</a><br>
+      <a href="/registro" class="registro">Registrarse</a>
+    </div>
+  </form>
+</div>
