--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<div class="login-box">
+  <img src="../../../assets/logoSeguridad.jpeg" class="avatar" alt="Avatar Image">
+  <form name=form method="post" action="login.php">
+    <!--USUARIO INGRESO-->
+    <label for="username" >Usuario</label>
+    <input type="text" name="usuarioF" id="usuario" placeholder="Ingresar Usuario" required> 
+    <!--CONTRASEÑA INGRESO-->
+    <label for="password">Contraseña</label>
+    <input type="password" name="contrasenia" id="contraseña" placeholder="Ingresar Contraseña">
+    <button type="submit" class="btn btn-primary" onclick="validarLogin()">Ingresar</button>
+    <a href="./contrasenia"><h6>Olvidaste la contraseña?</h6></a>
+    <a href="./registro"><h6>Registrarse</h6></a>
+  </form>
+</div>
